--- a/Assignment5/fancifymytext.html
+++ b/Assignment5/fancifymytext.html
@@ -12,7 +12,7 @@
     
     <nav class="menu">
         <ul>
-            <li><a href="file:///Users/janeeyachanta/Desktop/csc193/janeeya.github.io/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="https://github.com/Janeeya/janeeya.github.io">GitHub</a></li>
             <li><a href="#">About CSC 193A</a></li>
         </ul>
