--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <nav class="menu">
         <ul>
-            <li><a href="indext.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="https://github.com/Janeeya/janeeya.github.io">GitHub</a></li>
             <li><a href="#">About CSC 193A</a></li>
         </ul>
