--- a/Assignment5/fancifymytext.html
+++ b/Assignment5/fancifymytext.html
@@ -12,9 +12,8 @@
     
     <nav class="menu">
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="https://github.com/Janeeya/janeeya.github.io">GitHub</a></li>
-            <li><a href="#">About CSC 193A</a></li>
+            <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="https://github.com/Janeeya/janeeya.github.io"><i class="fab fa-github"></i> GitHub</a></li>
         </ul>
     </nav>
     
@@ -83,6 +82,7 @@
         position: absolute;
         top: 50px;
         left: 20px;
+        width: 100px;
         border-radius: 5px;
         padding: 12px;
         background-color: #000000;
@@ -99,11 +99,13 @@
     }
     .menu ul li a:hover {
         background-color: #007bff;
+        border-radius: 8px;
     }
     .menu li a {
         color: #fff;
         font-size: 16px;
         font-weight: 500;
+        padding: 2px 12px 2px 12px;
     }
     .menu.active {
         display: block;
